--- a/css/styles.css
+++ b/css/styles.css
@@ -88,26 +88,15 @@ footer,
     padding-bottom: 94px;
 }
 
+
+/* --------- Icons Social Network --------- */
+
 .icons_social_network{
     display: flex;
     width: 200px;
     height: 44px; 
     gap: 10px;
-    align-items: center;
 }
-
-.icon_instagram,
-.icon_twitter,
-.icon_facebook,
-.icon_linkedin{
-    width: 44px;
-    height: 44px;
-}
-
-.icon_instagram use{
-    justify-content: center;
-}
-
 
 .icon_social_network {
     width: 44px;
@@ -119,14 +108,20 @@ footer,
     height: 44px;
 }
 
-.icon
 
-.icon_social_network a:hover{
+.icon_social_network:hover{
     border-radius: 50px;
     background-color: #1380da;
 }
 
+.icon{
+    width: 20px;
+    height: 20px;
+}
 
+
+
+/* --------- Flexbox --------- */
 nav,
 .links_nav_bar,
 .elements,
@@ -282,13 +277,13 @@ nav,
     height: 80px;
 }
 
-.icon{
+.icon_customer{
     fill: #AFB1B8;
     width: 105px;
     height: 55px;
 }
 
-.icon:hover{
+.icon_customer:hover{
     fill: #2196F3;
 }
 
