--- a/css/styles.css
+++ b/css/styles.css
@@ -104,14 +104,20 @@ footer,
 }
 
 .icon_social_network a{
+    display: flex;
+    align-items: center;
+    fill: #AFB1B8;
+    justify-content: center;
+    border-radius: 50px;
     width: 44px;
     height: 44px;
 }
 
 
-.icon_social_network:hover{
-    border-radius: 50px;
+.icon_social_network a:hover,
+.icon_social_network a:focus{
     background-color: #1380da;
+    fill: #fff;
 }
 
 .icon{
@@ -305,6 +311,16 @@ nav,
     margin-top: 20px;
 }
 
+.footer_social_netwoks .icon_social_network a{
+    fill: #FFF;
+    border-radius: 50px;
+    background-color: rgba(255, 255, 255, 0.10);
+}
+
+.footer_social_netwoks .icon_social_network a:hover,
+.footer_social_netwoks .icon_social_network a:focus{
+    background-color: #2196F3;
+}
 
 /* ------------------------------------ Portafolio ------------------------------------ */
 
